--- a/charts/trino/templates/deployment-worker.yaml
+++ b/charts/trino/templates/deployment-worker.yaml
@@ -144,7 +144,7 @@ spec:
             failureThreshold: {{ .Values.worker.readinessProbe.failureThreshold | default 6 }}
             successThreshold: {{ .Values.worker.readinessProbe.successThreshold | default 1 }}
           lifecycle:
-            {{- toYaml .Values.worker.lifecycle | nindent 12 }}
+            {{- tpl (toYaml .Values.worker.lifecycle) . | nindent 12 }}
           resources:
             {{- toYaml .Values.worker.resources | nindent 12 }}
       {{- if .Values.sidecarContainers.worker }}
